# APF-Paper-5-Quantum-Structure-Hilbert-Born

./: APF_Reviewer_Walkthrough.ipynb  Paper_5_Quantum_Structure_Hilbert_Born_v1.0.tex  Paper_5_Quantum_Structure_Hilbert_Born_v2.0-PLEC.tex  README.md  REVIEWERS_GUIDE.md  START_HERE.md  interactive_dag.html  pyproject.toml  repo_map.json  run_checks.py  zenodo.json
Old/: zenodo.json.pre-relation-fix
ai_context/: AGENTS.md  ARGUMENT_FLOW.md  CITING.md  CLAIMS_LEDGER.md  DO_NOT_CLAIM.md  HOW_TO_VERIFY.md  LOCAL_VS_IMPORTED.md  PAPER_LINEAGE.md  STARTING_PROMPTS.md  THEOREMS.md  derivation_graph.json  repo_map.json  theorems.json
apf/: __init__.py  bank.py  core.py
