[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apf-paper5"
version = "2.0-PLEC"
description = "Quantum Structure Hilbert Born — executable mathematical appendix"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
  {name = "Ethan Brooke", email = "brooke.ethan@gmail.com"}
]
keywords = ["Hilbert space", "Born rule", "CPTP", "measurement", "quantum reconstruction"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.20", "scipy>=1.7"]

[project.urls]
Homepage = "https://github.com/Ethan-Brooke/APF-Paper-5-Quantum-Structure-Hilbert-Born"
"Bug Tracker" = "https://github.com/Ethan-Brooke/APF-Paper-5-Quantum-Structure-Hilbert-Born/issues"
"Zenodo" = "https://doi.org/10.5281/zenodo.18604861"

[tool.setuptools.packages.find]
include = ["apf*"]
